Adjust worker load monitor headers

--- a/templates/worker_load_monitor.html
+++ b/templates/worker_load_monitor.html
@@ -293,6 +293,8 @@
       background: #e8f0f7;
       color: #004892;
       font-weight: 600;
+      white-space: normal;
+      line-height: 1.2;
     }
 
     .compact-grid td {
